--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h1{
     font-family: Digital-7 Mono;
     font-size: xxx-large;
     text-align: center;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 body{
@@ -11,5 +11,34 @@ body{
 
 img{
     border-radius: 30px;
+    margin: auto;
+    display: block;
+    width: 100%;
   }
+
+  .button {
+    background-color: #000000; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+  
+  .button1 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #9e4caf;
+    border-radius: 30px;
+  }
+
+.button1:hover {
+  background-color: #9e4caf;
+  color: white;
+}
 
