--- a/mystyle.css
+++ b/mystyle.css
@@ -1,11 +1,11 @@
 h1{
     font-family: Digital-7 Mono;
     text-align: center;
-    color: rgb(253, 253, 253)
+    color: black;
 }
 
 p{
    font-family: verdana;
    text-align: center;
-   color:rgb(253, 253, 253);
+   color: black;
 }
