--- a/mystyle.css
+++ b/mystyle.css
@@ -1,13 +1,13 @@
 h1{
     font-family: Digital-7 Mono;
     text-align: center;
-    color: black;
+    color: white;
 }
 
 p{
    font-family: verdana;
    text-align: center;
-   color: black;
+   color: white;
 }
 
 body {
