--- a/mystyle.css
+++ b/mystyle.css
@@ -1,15 +1,47 @@
 h1{
     font-family: Digital-7 Mono;
     text-align: center;
-    color: white;
+    color: rgb(253, 253, 253)
 }
 
 p{
    font-family: verdana;
    text-align: center;
-   color: white;
+   color:rgb(253, 253, 253);
 }
 
 body {
     background-image: url('background_5.jpg');
+}
+
+button{
+    background-color: #000000; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.button1 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #9e4caf;
+    border-radius: 30px;
+  }
+
+.button1:hover {
+  background-color: #9e4caf;
+  color: white;
 }
